--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-UNSPLASH_ACCESS_KEY=CiK7E0VUVrAG6MHnFL4mXLZsGWUV5ara1yN-w_hYheE
+PORT=5000
+MONGO_URI=mongodb://localhost:27017/photo-project
+
 PEXELS_API_KEY=HNjbZWYH8fmuk4UGnDgzNCkmg8q0vwQ2T9Wwu8umDOu36IMfD8wNB44V
+UNSPLASH_ACCESS_KEY=CiK7E0VUVrAG6MHnFL4mXLZsGWUV5ara1yN-w_hYheE
+PIXABAY_API_KEY=50915934-18b9f0ee7ecef6fa0f40bbb21
