Cleaned up server, moved API keys to .env, added .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,40 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
-/node_modules
-/.pnp
+node_modules/
+.pnp/
 .pnp.js
 
 # testing
-/coverage
+coverage/
 
 # production
-/build
+build/
+dist/
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
 .env.production.local
 
+# logs
+logs
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# OS-specific
+Thumbs.db
+ehthumbs.db
+
+# editor folders
+.vscode/
+.idea/
+
+# local MongoDB data
+dump/
+
+# Optional: render.com or deployment configs
+render.yaml
