--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "type": "module",
   "dependencies": {
+    "axios": "^1.10.0",
     "cheerio": "^1.1.0",
     "csv-parser": "^3.2.0",
     "dotenv": "^16.5.0",
