Cleaned up file and dependencies

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/photo-project
+MONGO_URI=mongodb+srv://jbiz5056:joshua5056@cluster0.cb0mxaq.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 PEXELS_API_KEY=HNjbZWYH8fmuk4UGnDgzNCkmg8q0vwQ2T9Wwu8umDOu36IMfD8wNB44V
 UNSPLASH_ACCESS_KEY=CiK7E0VUVrAG6MHnFL4mXLZsGWUV5ara1yN-w_hYheE
